# pre-commit-dind

./: .pre-commit-config.yaml  pyproject.toml  testing_shim
pre_commit_dind/: __init__.py  __main__.py  patch.py
pre_commit_dind/languages/: docker.py
testing/: util.py
tests/: __init__.py  main_test.py  monkey_patch_test.py
tests/languages/: __init__.py  docker_test.py
